fixed: bg!==100% & jumping to left after TicketList rendering

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     margin: 0;
     font-family: "Open Sans", sans-serif;
-    height: 100%;
+    height: 100vh;
 }
 
 ul {
